# yaml-ai-mcp

./: .cursorrules  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.glama  LICENSE  README.md  SECURITY.md  acp.json  glama.json  llms.txt  mcp-wrapper.py  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.github/: FUNDING.yml
.github/workflows/: mcp-smithery-publish.yml  test.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
tests/: test_server.py
