[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "yaml-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — yaml-ai-mcp"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
[project.urls]
Homepage = "https://meok.ai"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]
